--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ nav ul {
 
 nav ul li {
     display: inline; /* ナビゲーションのリストアイテムを横並びに表示 ナビゲーションがフローティングしており、すっきりとした水平メニューに。*/
-    margin: 0 10px; /* リストアイテムの左右に10pxのマージンを追加 */
+    margin: 0 10px; /* 上下に余白がなく、リストアイテムの左右に10pxの余白 */
 }
 
 nav ul li a {
